--- a/app/src/main/res/layout/view_holder.xml
+++ b/app/src/main/res/layout/view_holder.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txtName"
@@ -18,9 +18,9 @@
         android:id="@+id/txtId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:padding="5dp"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
-        />
+        android:layout_weight="1"
+        android:padding="5dp"
+        android:text="TextView" />
 </LinearLayout>
